# First-Practice

./: CMakeLists.txt  CMakePresets.json  README.md
include/: uuid.hpp
src/: calculator.h  main.cpp
src/flights/: flights.cpp  flights.hpp
src/traveler/: traveler.cpp  traveler.hpp
tests/: calculator.test.cpp  flights.test.cpp  test1.cpp  test2.cpp  test3.cpp
